force-app/main/default/objects/STD_Codes_MDT__mdt/STD_Codes_MDT__mdt.object-meta.xml
<CustomObject>
    <description>This metaData is stored STD Codes</description>
    <label>STD Codes MDT</label>
    <pluralLabel>STD Codes MDT</pluralLabel>
</CustomObject>