force-app/main/default/objects/STD_Codes_MDT__mdt/fields/LDCA__c.field-meta.xml
<CustomField>
    <fullName>LDCA__c</fullName>
    <label>LDCA</label>
    <length>200</length>
    <type>Text</type>
</CustomField>