force-app/main/default/objects/STD_Codes_MDT__mdt/fields/SDCA__c.field-meta.xml
<CustomField>
    <fullName>SDCA__c</fullName>
    <label>SDCA</label>
    <length>200</length>
    <type>Text</type>
</CustomField>